--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "sass": "^1.69.5"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.200",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
