feature: add models & Experience page content

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
 			"assets/*": ["assets/*"],
 			"components/*": ["components/*"],
 			"hooks/*": ["hooks/*"],
+			"models/*": ["models/*"],
 			"services/*": ["services/*"],
 			"store/*": ["store/*"],
 			"views/*": ["views/*"]
