--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@motionone/utils": "^10.17.0",
     "@reduxjs/toolkit": "^1.9.7",
     "@vkontakte/icons": "^2.72.0",
     "axios": "^1.5.1",
+    "framer-motion": "^11.0.6",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
