--- a/package.json
+++ b/package.json
@@ -1,40 +1,43 @@
 {
-  "name": "asdznpro-cv",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@motionone/utils": "^10.17.0",
-    "@reduxjs/toolkit": "^1.9.7",
-    "@vkontakte/icons": "^2.72.0",
-    "axios": "^1.5.1",
-    "framer-motion": "^11.0.6",
-    "lodash": "^4.17.21",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-masonry-css": "^1.0.16",
-    "react-multi-carousel": "^2.8.5",
-    "react-redux": "^8.1.3",
-    "react-router-dom": "^6.17.0",
-    "sass": "^1.69.5"
-  },
-  "devDependencies": {
-    "@types/lodash": "^4.14.200",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react-swc": "^3.3.2",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
-  }
+	"name": "asdznpro-cv",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+		"preview": "vite preview",
+		"component": "generate-react component"
+	},
+	"dependencies": {
+		"@motionone/utils": "^10.17.0",
+		"@reduxjs/toolkit": "^1.9.7",
+		"@vkontakte/icons": "^2.72.0",
+		"axios": "^1.5.1",
+		"framer-motion": "^11.0.6",
+		"lodash": "^4.17.21",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-masonry-css": "^1.0.16",
+		"react-multi-carousel": "^2.8.5",
+		"react-redux": "^8.1.3",
+		"react-router-dom": "^6.17.0",
+		"react-use": "^17.5.0",
+		"sass": "^1.69.5"
+	},
+	"devDependencies": {
+		"@types/lodash": "^4.14.200",
+		"@types/react": "^18.2.15",
+		"@types/react-dom": "^18.2.7",
+		"@typescript-eslint/eslint-plugin": "^6.0.0",
+		"@typescript-eslint/parser": "^6.0.0",
+		"@vitejs/plugin-react-swc": "^3.3.2",
+		"eslint": "^8.45.0",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-refresh": "^0.4.3",
+		"generate-react-cli": "^8.4.1",
+		"typescript": "^5.0.2",
+		"vite": "^4.4.5"
+	}
 }
