refactor: update all

--- a/package.json
+++ b/package.json
@@ -1,43 +1,52 @@
 {
 	"name": "asdznpro-cv",
 	"private": true,
-	"version": "0.0.0",
+	"version": "0.1.3",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
-		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+		"lint": "npx eslint . --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview",
+		"prettier": "prettier . --check --ignore-unknown",
 		"component": "generate-react component"
 	},
 	"dependencies": {
 		"@motionone/utils": "^10.17.0",
-		"@reduxjs/toolkit": "^1.9.7",
-		"@vkontakte/icons": "^2.72.0",
-		"axios": "^1.5.1",
-		"framer-motion": "^11.0.6",
+		"@reduxjs/toolkit": "^2.2.5",
+		"@vkontakte/icons": "^2.114.0",
+		"axios": "^1.6.8",
+		"framer-motion": "^11.2.3",
 		"lodash": "^4.17.21",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
 		"react-masonry-css": "^1.0.16",
 		"react-multi-carousel": "^2.8.5",
-		"react-redux": "^8.1.3",
-		"react-router-dom": "^6.17.0",
+		"react-redux": "^9.1.2",
+		"react-router-dom": "^6.23.1",
 		"react-use": "^17.5.0",
-		"sass": "^1.69.5"
+		"sass": "^1.77.1"
 	},
 	"devDependencies": {
-		"@types/lodash": "^4.14.200",
-		"@types/react": "^18.2.15",
-		"@types/react-dom": "^18.2.7",
-		"@typescript-eslint/eslint-plugin": "^6.0.0",
-		"@typescript-eslint/parser": "^6.0.0",
-		"@vitejs/plugin-react-swc": "^3.3.2",
-		"eslint": "^8.45.0",
-		"eslint-plugin-react-hooks": "^4.6.0",
-		"eslint-plugin-react-refresh": "^0.4.3",
+		"@types/lodash": "^4.17.1",
+		"@types/react": "^18.3.2",
+		"@types/react-dom": "^18.3.0",
+		"@typescript-eslint/eslint-plugin": "^7.9.0",
+		"@typescript-eslint/parser": "^7.9.0",
+		"@vitejs/plugin-react-swc": "^3.6.0",
+		"eslint": "^9.2.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-prettier": "^5.1.3",
+		"eslint-plugin-react": "^7.34.1",
+		"eslint-plugin-react-hooks": "^4.6.2",
+		"eslint-plugin-react-refresh": "^0.4.7",
 		"generate-react-cli": "^8.4.1",
-		"typescript": "^5.0.2",
-		"vite": "^4.4.5"
+		"globals": "^15.2.0",
+		"typescript": "^5.4.5",
+		"typescript-eslint": "^7.9.0",
+		"vite": "^5.2.11"
+	},
+	"overrides": {
+		"eslint": "^9.2.0"
 	}
 }
