--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
 		"paths": {
 			"assets/*": ["assets/*"],
 			"components/*": ["components/*"],
+			"constants/*": ["constants/*"],
 			"hooks/*": ["hooks/*"],
 			"models/*": ["models/*"],
 			"services/*": ["services/*"],
