refactor: update all

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "asdznpro-cv",
 	"private": true,
-	"version": "0.1.10",
+	"version": "0.1.11",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
@@ -16,6 +16,7 @@
 		"@reduxjs/toolkit": "^2.2.5",
 		"@vkontakte/icons": "^2.114.0",
 		"axios": "^1.6.8",
+		"embla-carousel-autoplay": "^8.1.3",
 		"embla-carousel-react": "^8.1.0",
 		"framer-motion": "^11.2.3",
 		"lodash": "^4.17.21",
