--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "asdznpro-cv",
 	"private": true,
-	"version": "0.1.19",
+	"version": "0.1.20",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
@@ -25,6 +25,7 @@
 		"npm": "^10.8.2",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-draggable": "^4.4.6",
 		"react-masonry-css": "^1.0.16",
 		"react-multi-carousel": "^2.8.5",
 		"react-redux": "^9.1.2",
